--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,19 @@
-Flask==2.2.3
-qrcode==7.4.2
-pymongo==4.5.0
+blinker==1.9.0
+braq==0.0.12
+click==8.1.8
+colorama==0.4.6
+dnspython==2.7.0
+Flask==3.1.0
+itsdangerous==2.2.0
+Jinja2==3.1.5
+kvf==0.0.3
+MarkupSafe==3.0.2
+numpy==2.2.1
+opencv-python==4.10.0.84
+paradict==0.0.16
+pillow==11.0.0
+pymongo==4.10.1
+pyzbar==0.1.9
+qrcode==8.0
+shared==0.0.32
+Werkzeug==3.1.3
